- Fix `max_keepalive` not applying to MQTT v3.1.1 and v3.1 connections.
  These clients are now rejected if their keepalive value exceeds
  max_keepalive. This option allows CVE-2020-13849, which is for the MQTT
  v3.1.1 protocol itself rather than an implementation, to be addressed.
- Fix broker not quiting if e.g. the `password_file` is specified as a
  directory. Closes #2241.

Client library:
- If a client uses TLS-PSK then force the default cipher list to use "PSK"
  ciphers only. This means that a client connecting to a broker configured
  with x509 certificates only will now fail. Prior to this, the client would
  connect successfully without verifying certificates, because they were not
  configured.
- Disable TLS v1.3 when using TLS-PSK, because it isn't correctly configured.

Clients:
- mosquitto_sub and mosquitto_rr now open stdout in binary mode on Windows
  so binary payloads are not modified when printing.

Build:
- Fix installation using WITH_TLS=no. Closes #2281.

2.0.11 - 2021-06-08
===================

Security:
- If a MQTT v5 client connects with a crafted CONNECT packet a memory leak
  will occur. This has been fixed.

Broker:
- Fix possible crash having just upgraded from 1.6 if `per_listener_settings
  true` is set, and a SIGHUP is sent to the broker before a client has
  reconnected to the broker. Closes #2167.
- Fix bridge not reconnectng if the first reconnection attempt fails.
  Closes #2207.
- Improve QoS 0 outgoing packet queueing.
- Fix non-reachable bridge blocking the broker on Windows. Closes #2172.
- Fix possible corruption of pollfd array on Windows when bridges were 
  reconnecting. Closes #2173.
- Fix QoS 0 messages not being queued when `queue_qos0_messages` was enabled.
  Closes #2224.
- Fix openssl not being linked to dynamic security plugin. Closes #2277.

Clients:
- If sending mosquitto_sub output to a pipe, mosquitto_sub will now detect
  that the pipe has closed and disconnect. Closes #2164.